apps/rethinkdb/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rethinkdb
spec:
  serviceName: rethinkdb-internal
  replicas: 3
  selector:
    matchLabels:
      app: rethinkdb
  template:
    metadata:
      labels:
        app: rethinkdb
    spec:
      # distribute instances across nodes
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - rethinkdb
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: rethinkdb
          image: rethinkdb:2.4.2
          # use a custom command to
          # (1) set up the rethinkdb cluster communication and
          # (2) avoid creating default databases
          command:
            - sh
            - -c
            - |
              ordinal=$(hostname | awk -F- '{print $NF}');
              echo "Starting rethinkdb node rethinkdb-$ordinal...";
              # avoid creating default databases
              rethinkdb create;
              # create the cluster
              if [ "$ordinal" -eq 0 ]; then
                # the first pod is the seed node
                echo "Starting seed node rethinkdb-0...";
                exec rethinkdb --bind all --directory /data --cache-size 4096;
              else
                # all other pods join the first pod
                echo "Starting peer node with join rethinkdb-0...";
                exec rethinkdb --bind all --directory /data --cache-size 4096 --join rethinkdb-0.rethinkdb-internal;
              fi
          resources:
            requests:
              cpu: 500m
              memory: 5Gi
            limits:
              cpu: "2"
              memory: 6Gi
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: rook-ceph-block
        resources:
          requests:
            storage: 200Gi
