apps/rethinkdb/base/rethinkdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rethinkdb-deployment
  labels:
    app: rethinkdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rethinkdb
  template:
    metadata:
      labels:
        app: rethinkdb
        tier: backend
    spec:
      containers:
        - name: rethinkdb-container
          image: rethinkdb:2.4.2
          args: ["--bind", "all", "--cache-size", "2048"]
          ports:
            - containerPort: 8080 # administrative HTTP connections
            - containerPort: 28015 # client driver connections
            - containerPort: 29015 # intracluster connections
          volumeMounts:
            - mountPath: /data
              name: volume
          resources:
            requests:
              cpu: 100m
              memory: 8G
            limits:
              cpu: "1"
              memory: 8G
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: rethinkdb-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: rethinkdb-service
  labels:
    app: rethinkdb
spec:
  selector:
    app: rethinkdb
    tier: backend
  ports:
    - name: admin
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: intracluster
      protocol: TCP
      port: 29015
      targetPort: 29015
    - name: client
      protocol: TCP
      port: 28015
      targetPort: 28015
  type: ClusterIP
